# nrf52_ble_hids_bbq10kbd

./: CMakeLists.txt  Kconfig  LICENSE  README.md  bb_kb.code-workspace  prj.conf
bbq10kbd_module/zephyr/: CMakeLists.txt  Kconfig  bbq10kbd.c  bbq10kbd.h  bbq10kbd_api.h
boards/arm/bb_kb/: Kconfig  Kconfig.board  Kconfig.defconfig  bb_kb.dts  bb_kb.yaml  bb_kb_defconfig
child_image/: hci_rpmsg.conf
drivers/bbq10kbd/: CMakeLists.txt  Kconfig  bbq10kbd.c  bbq10kbd.h
dts/bindings/: solderparty,bbq10kbd.yml
dts/bindings/misc/: solderparty,bbq10kbd.yaml
src/: main.c
